# graphics-programming-2-vulkan-project-Goncalo-Alexandre-Viveiros-Guilherme

./: .gitignore  CMakeLists.txt  README.md
project/: CMakeLists.txt
project/shaders/: blitShader.frag  depthPrePassShader.vert  lightShader.frag  lightShader.vert  shader.frag  shader.vert
project/src/: GGBlit.cpp  GGBlit.h  GGBuffer.cpp  GGBuffer.h  GGCamera.cpp  GGCamera.h  GGCommandManager.cpp  GGCommandManager.h  GGDescriptorManager.cpp  GGDescriptorManager.h  GGGBuffer.cpp  GGGBuffer.h  GGImage.cpp  GGImage.h  GGPipeLine.h  GGPipeline.cpp  GGShader.h  GGSwapChain.cpp  GGSwapChain.h  GGTexture.cpp  GGTexture.h  GGVkDevice.cpp  GGVkDevice.h  GGVkHelperFunctions.cpp  GGVkHelperFunctions.h  GGVkImage.cpp  GGVkImage.h  GGVulkan.cpp  GGVulkan.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Time.cpp  Time.h  VkErrorHandler.cpp  VkErrorHandler.h  main.cpp
